--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=TimesNewRoman:wght@300;400;500;600;700&display=swap');
 
 * {
   margin: 0;
